# doob

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  pyproject.toml  run_historical.sh
.claude/: settings.json
.claude/hooks/: pre-commit-check.sh
branding/: brand-guidelines.html  report-template.html  tokens.css
design/: report-template.html  tokens.css
docs/: architecture.md  backtesting.md
reports/: autoresearch-eval-cache.jsonl  autoresearch-ledger.jsonl  autoresearch-loop-report.md  autoresearch-strategy-registry.json  autoresearch-top10-interactive-report.html  paper-research-report.html  refactor-report.html
reports/autoresearch-audits/: seed-001-vol_spread-v0-test-2025-01-01-to-2026-03-11.json  seed-001-vol_spread-v0-train-2020-01-01-to-2024-12-31.json  seed-003-vol_spread-v2-test-2025-01-01-to-2026-03-11.json  seed-004-vol_spread-v1-train-2020-01-01-to-2024-12-31.json  seed-005-vol_spread-v1-test-2025-01-01-to-2026-03-11.json  seed-006-vol_spread-v0-train-2020-01-01-to-2024-12-31.json  seed-015-vol_spread-v1-test-2025-01-01-to-2026-03-11.json  seed-015-vol_spread-v1-train-2020-01-01-to-2024-12-31.json  seed-024-vol_spread-v2-test-2025-01-01-to-2026-03-11.json  seed-026-vol_spread-v0-train-2020-01-01-to-2024-12-31.json  seed-027-volatility_regime-v2-test-2025-01-01-to-2026-03-11.json  seed-027-volatility_regime-v2-train-2020-01-01-to-2024-12-31.json  seed-036-volatility_regime-v0-test-2025-01-01-to-2026-03-11.json  seed-036-volatility_regime-v0-train-2020-01-01-to-2024-12-31.json  seed-037-volatility_regime-v0-test-2025-01-01-to-2026-03-11.json  seed-037-volatility_regime-v0-train-2020-01-01-to-2024-12-31.json  seed-038-vol_spread-v2-test-2025-01-01-to-2026-03-11.json  (+39 more)
scripts/: paper_research_report.py
src/: cli.rs  config.rs  lib.rs  main.rs
src/data/: discovery.rs  mod.rs  paths.rs  (+2 more)
tasks/: lessons.md  todo.md
tests/: cli_integration.sh  conftest.py  test_breadth_washout.py  test_cli.py  test_config.py  test_data_discovery.py  test_data_presets.py  test_data_readers.py  test_intraday_drift.py  test_metrics.py  test_ndx100_sma_breadth.py  test_overnight_drift.py
(+31 files in other folders)
