[package]
name = "doob"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Quantitative strategy research and backtesting"

[[bin]]
name = "doob"
path = "src/main.rs"

[[bin]]
name = "autoresearch_loop"
path = "src/bin/autoresearch_loop.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dirs = "6"
dotenvy = "0.15"
nalgebra = "0.33"
num-format = "0.4"
polars = { version = "0.46", features = ["lazy", "parquet", "csv", "dtype-date", "temporal", "rolling_window"] }
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[features]
default = []
plotting = []  # reserved for future plotters integration

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
