[project]
name = "doob"
version = "0.1.0"
requires-python = ">=3.12"
description = "Quantitative strategy research and backtesting"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "duckdb>=0.9",
    "requests>=2.28",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
stats = ["statsmodels>=0.14"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.4",
]
all = ["doob[plotting,stats,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: tests requiring a real ~/market-warehouse data lake",
]

[tool.coverage.run]
source = ["doob"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doob"]
